2022-01-28  Antoine Quint  <graouts@webkit.org>

        [WPT] Remove outdated Web Animations expectations
        https://bugs.webkit.org/show_bug.cgi?id=235767

        Unreviewed test gardening.

        * platform/glib/imported/w3c/web-platform-tests/web-animations/animation-model/animation-types/interpolation-per-property-expected.txt: Removed.

2022-01-27  Chris Dumez  <cdumez@apple.com>

        Radio buttons with no form owner are not grouped
        https://bugs.webkit.org/show_bug.cgi?id=220502
        <rdar://problem/73300895>

        Reviewed by Darin Adler.

        * fast/forms/radio/ValidityState-valueMissing-radio-expected.txt:
        * fast/forms/radio/ValidityState-valueMissing-radio.html:
        * fast/forms/radio/radio-live-validation-style-expected.txt:
        * fast/forms/radio/radio-live-validation-style.html:
        Update existing tests to reflect behavior change. I have verified that our behavior on those tests
        is aligned with both Firefox and Chrome.

        * platform/gtk/imported/w3c/web-platform-tests/html/semantics/forms/constraints/form-validation-validity-valid-expected.txt:
        * platform/gtk/imported/w3c/web-platform-tests/html/semantics/forms/constraints/form-validation-validity-valueMissing-expected.txt:
        * platform/ios-wk2/imported/w3c/web-platform-tests/html/semantics/forms/constraints/form-validation-validity-valid-expected.txt:
        * platform/ios-wk2/imported/w3c/web-platform-tests/html/semantics/forms/constraints/form-validation-validity-valueMissing-expected.txt:
        * platform/mac-wk2/imported/w3c/web-platform-tests/html/semantics/forms/constraints/form-validation-validity-valid-expected.txt:
        * platform/mac-wk2/imported/w3c/web-platform-tests/html/semantics/forms/constraints/form-validation-validity-valueMissing-expected.txt:
        Rebaseline existing WPT tests now that more checks are passing.

2022-01-27  Antoine Quint  <graouts@webkit.org>
